@@ -212,8 +212,7 @@ class Library(ABC):
                         self.reload(item, force=True)
                         if overlay and "Overlay" in [la.tag for la in self.item_labels(item)]:
                             item.removeLabel("Overlay")
-                    self._upload_image(item, poster)
-                    poster_uploaded = True
+                    poster_uploaded = self._upload_image(item, poster)
                     logger.info(f"Metadata: {poster.attribute} updated {poster.message}")
                 elif self.show_asset_not_needed:
                     logger.info(f"Metadata: {poster.prefix}poster update not needed")
@@ -228,8 +227,7 @@ class Library(ABC):
                 if self.config.Cache:
                     _, image_compare, _ = self.config.Cache.query_image_map(item.ratingKey, f"{self.image_table_name}_backgrounds")
                 if not image_compare or str(background.compare) != str(image_compare):
-                    self._upload_image(item, background)
-                    background_uploaded = True
+                    background_uploaded = self._upload_image(item, background)
                     logger.info(f"Metadata: {background.attribute} updated {background.message}")
                 elif self.show_asset_not_needed:
                     logger.info(f"Metadata: {background.prefix}background update not needed")
